Refactor code structure for improved readability and maintainability

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
   --color-secondary: #ec6a8d;
   --color-tertiary: #a645a2;
   --color-dark: #121214;
+  --color-off-white: #faf9f6;
 
   --font-primary: "Questrial", sans-serif;
   --font-secondary: "Poppins", sans-serif;
